--- a/css/style.css
+++ b/css/style.css
@@ -1001,12 +1001,12 @@
 
 		.wrapper.style1 {
 
-			background-color: rgb(111,111,111);
-			-moz-background-image: linear-gradient(60deg, rgb(111,111,111) 50%, rgb(111,111,111) 50%);
-			-webkit-background-image: linear-gradient(60deg, rgb(111,111,111) 50%, rgb(111,111,111) 50%);
-			-o-background-image: linear-gradient(60deg, rgb(111,111,111) 50%, rgb(111,111,111) 50%);
-			-ms-background-image: linear-gradient(60deg, rgb(111,111,111) 50%, rgb(111,111,111) 50%);
-			background-image: linear-gradient(60deg, rgb(111,111,111) 50%, rgb(111,111,111) 50%);
+			background-color: rgba(111,111,111,0.5);
+			-moz-background-image: linear-gradient(60deg, rgba(111,111,111,0.5) 50%, rgba(111,111,111,0.5) 50%);
+			-webkit-background-image: linear-gradient(60deg, rgba(111,111,111,0.5) 50%, rgba(111,111,111,0.5) 50%);
+			-o-background-image: linear-gradient(60deg, rgba(111,111,111,0.5) 50%, rgba(111,111,111,0.5) 50%);
+			-ms-background-image: linear-gradient(60deg, rgba(111,111,111,0.5) 50%, rgba(111,111,111,0.5) 50%);
+			background-image: linear-gradient(60deg, rgba(111,111,111,0.5) 50%, rgba(111,111,111,0.5) 50%);
 			color: #ffffff;
 		}
 
