--- a/css/style.css
+++ b/css/style.css
@@ -1001,12 +1001,12 @@
 
 		.wrapper.style1 {
 
-			background-color: rgba(224,148,148,0.5);
-			-moz-background-image: linear-gradient(60deg, rgba(224,148,148,0.5) 50%, rgba(224,148,148,0.5) 50%);
-			-webkit-background-image: linear-gradient(60deg, rgba(224,148,148,0.5) 50%, rgba(224,148,148,0.5) 50%);
-			-o-background-image: linear-gradient(60deg, rgba(224,148,148,0.5) 50%, rgba(224,148,148,0.5) 50%);
-			-ms-background-image: linear-gradient(60deg, rgba(224,148,148,0.5) 50%, rgba(224,148,148,0.5) 50%);
-			background-image: linear-gradient(60deg, rgba(224,148,148,0.5) 50%, rgba(224,148,148,0.5) 50%);
+			background-color: rgb(198,159,159);
+			-moz-background-image: linear-gradient(60deg, rgb(198,159,159) 50%, rgb(198,159,159) 50%);
+			-webkit-background-image: linear-gradient(60deg, rgb(198,159,159) 50%, rgb(198,159,159) 50%);
+			-o-background-image: linear-gradient(60deg, rgb(198,159,159) 50%, rgb(198,159,159) 50%);
+			-ms-background-image: linear-gradient(60deg, rgb(198,159,159) 50%, rgb(198,159,159) 50%);
+			background-image:linear-gradient(60deg, rgb(198,159,159) 50%, rgb(198,159,159) 50%);
 			color: #ffffff;
 		}
 
