--- a/css/style.css
+++ b/css/style.css
@@ -957,12 +957,13 @@
 /* Banner */
 
 	#banner {
-		background: url("images/overlay.png"), url("../images/Salgado.jpg");
+		background: url("../images/Salgado.jpg");
+		height: 100%;
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: cover;
 		color: #ffffff;
-		padding: 16em 0em 14em;
+		padding: 0em 0em 0em;
 		text-align: center;
 	}
 
