--- a/css/style.css
+++ b/css/style.css
@@ -1303,9 +1303,9 @@ border-right: 2px outset black;*/
 #counter
 {
   background:black;
-  color:red;
+  color:white;
   font-family:"Courier New", Courier, monospace;
-  font-size:32px;
+  font-size:24px;
   line-height:38px;
   width:80px;
   padding:0px;
