--- a/css/style.css
+++ b/css/style.css
@@ -1050,6 +1050,30 @@
 				margin-bottom: 0.5em;
 			}
 
+.wrapper.style13 {
+
+			background-color: rgba(179,135,265,0.5);
+			-moz-background-image: linear-gradient(60deg, rgba(179,135,265,0.5) 50%,rgba(179,135,265,0.5) 50%);
+			-webkit-background-image: linear-gradient(60deg, rgba(179,135,265,0.5) 50%,rgba(179,135,265,0.5) 50%);
+			-o-background-image: linear-gradient(60deg, rgba(179,135,265,0.5) 50%,rgba(179,135,265,0.5) 50%);
+			-ms-background-image: linear-gradient(60deg, rgba(179,135,265,0.5) 50%,rgba(179,135,265,0.5) 50%);
+			background-image: linear-gradient(60deg, rgba(179,135,265,0.5) 50%,rgba(179,135,265,0.5) 50%);
+			color: #ffffff;
+		}
+
+			.wrapper.style13 header {
+				margin-bottom: 4em;
+			}
+
+			.wrapper.style13 h2 {
+				color: #ffffff;
+			}
+
+			.wrapper.style13 .icon.big {
+				border-color: #ffffff;
+				margin-bottom: 0.5em;
+			}
+
 		.wrapper.style2 .title, .wrapper.style2 header {
 			border-bottom: medium double rgba(144, 144, 144, 0.25);
 			padding-bottom: 1em;
