--- a/css/style.css
+++ b/css/style.css
@@ -1327,7 +1327,7 @@ border-right: 2px outset black;*/
 #counter
 {
   background:black;
-  color:Android Green;
+  color:#A4C639;
   font-family:"Courier New", Courier, monospace;
   font-size:14px;
   line-height:16px;
