--- a/css/style.css
+++ b/css/style.css
@@ -997,7 +997,7 @@
 /* Banner2 */
 
 	#banner2 {
-		background: url("../images/Salgado2.jpg");
+		background: url("../images/Salgado2.jpeg");
 		height: 100%;
 		background-position: center;
 		background-repeat: no-repeat;
