--- a/css/style.css
+++ b/css/style.css
@@ -958,7 +958,7 @@
 
 	#banner {
 		background: url("../images/Salgado.jpg");
-		height: 100%;
+		height: auto;
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: cover;
@@ -998,7 +998,7 @@
 
 	#banner2 {
 		background: url("../images/Salgado2.jpeg");
-		height: 100%;
+		height:auto;
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: cover;
