--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import url(font-awesome.min.css);
-@import url("https://fonts.googleapis.com/css?family=Lato:300,400");
-
+@import url("http://fonts.googleapis.com/css?family=Lato:300,400");
+@import url('https://fonts.googleapis.com/css?family=PT+Serif');
 
 /*
 	Interphase by TEMPLATED
@@ -17,7 +17,7 @@
 
 	body, input, select, textarea {
 		color: #444;
-		font-family: "Lato", Helvetica, sans-serif;
+		font-family: "PT+Serif", Helvetica, sans-serif;
 		font-size: 15pt;
 		font-weight: 300;
 		line-height: 1.65em;
