--- a/css/style.css
+++ b/css/style.css
@@ -959,7 +959,7 @@
 
 	#banner {
 		background: url("../images/Salgado.jpg");
-		height: auto;
+		height: 484;
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: cover;
