--- a/css/style.css
+++ b/css/style.css
@@ -999,7 +999,7 @@
 
 	#banner2 {
 		background: url("../images/Salgado2.jpeg");
-		height:484;
+		height:484px;
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: cover;
@@ -1021,7 +1021,7 @@
 			margin: 1.5em 0 0 0;
 		}
 
-		#banner2 .actions {
+		#banner2 .actions2 {
 			margin: 3em 0 0 0;
 		}
 
