--- a/css/style.css
+++ b/css/style.css
@@ -1324,6 +1324,7 @@ border-radius:150px;
 .roundedImage
 {   display: flex;
     flex-direction: row;
+	justify-content:space-between;
    align-items:center;
    width:700px; 
    height:200px;
