--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,9 @@
 			color: inherit;
 			text-decoration: none;
 		}
-
+	h1 { font-size: 2em;
+		line-height: 1.5em;
+}
 	h2 {
 		font-size: 1.75em;
 		line-height: 1.5em;
