--- a/css/style.css
+++ b/css/style.css
@@ -1372,7 +1372,7 @@ border-right: 2px outset black;*/
 #counter
 {
   background:black;
-  color:#A4C639;
+  color:#009688;
   font-family:"Courier New", Courier, monospace;
   font-size:14px;
   line-height:16px;
