--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import url(font-awesome.min.css);
 @import url("http://fonts.googleapis.com/css?family=Lato:300,400");
 @import url('https://fonts.googleapis.com/css?family=PT+Serif');
+@import url('https://fonts.googleapis.com/css?family=Arapey:400,400i');
 
 /*
 	Interphase by TEMPLATED
@@ -17,7 +18,7 @@
 
 	body, input, select, textarea {
 		color: #444;
-		font-family: "PT+Serif", Helvetica, sans-serif;
+		font-family: 'Arapey', serif;
 		font-size: 15pt;
 		font-weight: 300;
 		line-height: 1.65em;
