--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import url("http://fonts.googleapis.com/css?family=Lato:300,400");
 @import url('https://fonts.googleapis.com/css?family=PT+Serif');
 @import url('https://fonts.googleapis.com/css?family=Arapey:400,400i');
+@import url('https://fonts.googleapis.com/css?family=Gabriela')
 
 /*
 	Interphase by TEMPLATED
@@ -18,7 +19,7 @@
 
 	body, input, select, textarea {
 		color: #444;
-		font-family: 'Arapey', serif;
+		font-family: 'Gabriela', serif;
 		font-size: 15pt;
 		font-weight: 300;
 		line-height: 1.65em;
