--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
 
 	body, input, select, textarea {
 		color: #444;
-		font-family: 'Gabriela', serif;
+		font-family: 'Arapey', serif;
 		font-size: 15pt;
 		font-weight: 300;
 		line-height: 1.65em;
@@ -1374,7 +1374,7 @@ border-right: 2px outset black;*/
 #counter
 {
   background:black;
-  color:#009688;
+  color:#004953;
   font-family:"Courier New", Courier, monospace;
   font-size:14px;
   line-height:16px;
