--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 
 	body, input, select, textarea {
 		color: #444;
-		font-family: 'Aref Ruqaa', serif;
+		font-family: 'Arapey', serif;
 		font-size: 15pt;
 		font-weight: 300;
 		line-height: 1.65em;
