--- a/css/style.css
+++ b/css/style.css
@@ -1008,7 +1008,7 @@
 
 	#banner2 {
 		background: url("../images/Salgado.jpg");
-		/*height:600px;*/
+		height:484;
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: cover;
