--- a/css/style.css
+++ b/css/style.css
@@ -1293,6 +1293,13 @@ border:3px solid white;
 }
 
 
+.paraxify.intermede-1{
+background: url("../images/Salgado.jpg");
+height:800px;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+}
 
 .adit {
   height: 50px ;
