--- a/css/style.css
+++ b/css/style.css
@@ -1302,7 +1302,7 @@ height:800px;
 }
 
 .paraxify.intermede-2{
-background: url("../images/groporc.jpg");
+background: url("../images/grosporc.jpg");
 height:800px;
   background-attachment: fixed;
   background-position: center;
