--- a/css/style.css
+++ b/css/style.css
@@ -1294,7 +1294,7 @@ border:3px solid white;
 
 
 .paraxify.intermede-1{
-background: url("../images/Salgado.jpg");
+background: url("../images/Salgado3.jpeg");
 height:800px;
   background-attachment: fixed;
   background-position: center;
@@ -1302,7 +1302,7 @@ height:800px;
 }
 
 .paraxify.intermede-2{
-background: url("../images/grosporc.jpg");
+background: url("../images/Salgado.jpeg");
 height:800px;
   background-attachment: fixed;
   background-position: center;
