--- a/css/style.css
+++ b/css/style.css
@@ -1317,6 +1317,14 @@ height:800px;
   background-size: cover;
 }
 
+.paraxify.intermede-4{
+background: url("../images/Salgado5.jpeg");
+height:800px;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+}
+
 .adit {
   height: 50px ;
   width: 40%;
