--- a/css/style.css
+++ b/css/style.css
@@ -956,6 +956,7 @@ width:90%;
 						color: #cee8d8;
 						display: inline-block;
 						text-decoration: none;
+						font-size:14px;
 					}
 
 						#header nav > ul > li a:hover {
