--- a/css/style.css
+++ b/css/style.css
@@ -1239,27 +1239,46 @@ width:90%;
 
 /* Variant : for left positioned triangle
 ------------------------------------------ */
-
+/* Fillon  vert-jaune*/
 .triangle-right.left {
   margin-left:40px;
-  background: rgba(36,74,131,1);
-  box-shadow: 6px 6px 6px black;
+  /*background: #d1e231;*/
+  border: 5px solid #d1e231;
+	
+/*box-shadow: 6px 6px 6px black;*/
 }
-
+/* Hamon Violet-marron*/
 .triangle-right.left0 {
   margin-left:40px;
-  background:rgba(0,0,0,0.5);
-     box-shadow: 6px 6px 6px black;
-border:3px solid white;
+  background:#933d41;
+   /*  box-shadow: 6px 6px 6px black;*/
+border:5px solid #933d41;
 
 
 }
+/* Le pen orange */
 .triangle-right.left2 {
   margin-left:40px;
-  background:rgba(227,0,27,0.5);
-  box-shadow: 6px 6px 6px black;
+  background:#e48400;
+  /*box-shadow: 6px 6px 6px black;*/
+	border: 5px solid #e48400;
 }
 
+/* Mélenchon bleu canard */
+.triangle-right.left3{
+  margin-left:40px;
+  background:#009688;
+  /*box-shadow: 6px 6px 6px black;*/
+	border: 5px solid #009688;
+}
+
+/* Macron bleu */
+.triangle-right.left4{
+  margin-left:40px;
+  background:#0F52Ba;
+  /*box-shadow: 6px 6px 6px black;*/
+	border: 5px solid #0F52Ba;
+}
 
 
 /* THE TRIANGLE
@@ -1283,28 +1302,50 @@ border:3px solid white;
 /* Variant : left
 ------------------------------------------ */
 
+/*Fillon*/
 .triangle-right.left:after {
   top:16px;
   left:-40px; /* value = - border-left-width - border-right-width */
   bottom:auto;
   border-width:15px 40px 0 0; /* vary these values to change the angle of the vertex */
-  border-color:transparent rgba(36,74,131,0.5);
+  border-color:transparent #d1e231;
 }
 
-.triangle-right.left2:after {
-  top:16px;
-  left:-40px; /* value = - border-left-width - border-right-width */
-  bottom:auto;
-  border-width:15px 40px 0 0; /* vary these values to change the angle of the vertex */
-  border-color:transparent rgba(227,0,27,0.5);
-}
+/*Hamon*/
 .triangle-right.left0:after {
   top:16px;
   left:-40px; /* value = - border-left-width - border-right-width */
   bottom:auto;
   border-width:15px 40px 0 0; /* vary these values to change the angle of the vertex */
-  border-color:transparent white;
+  border-color:transparent #933d41;
 }
+/*Le pen */
+.triangle-right.left2:after {
+  top:16px;
+  left:-40px; /* value = - border-left-width - border-right-width */
+  bottom:auto;
+  border-width:15px 40px 0 0; /* vary these values to change the angle of the vertex */
+  border-color:transparent #e48400 ;
+}
+
+/* Mélenchon*/
+.triangle-right.left3:after {
+  top:16px;
+  left:-40px; /* value = - border-left-width - border-right-width */
+  bottom:auto;
+  border-width:15px 40px 0 0; /* vary these values to change the angle of the vertex */
+  border-color:transparent #009688;
+}
+
+/* Macron*/
+.triangle-right.left4:after {
+  top:16px;
+  left:-40px; /* value = - border-left-width - border-right-width */
+  bottom:auto;
+  border-width:15px 40px 0 0; /* vary these values to change the angle of the vertex */
+  border-color:transparent #0F52Ba;
+}
+
 
 
 .paraxify.intermede-1{
@@ -1356,7 +1397,7 @@ height:800px;
 	border:3px solid white;
    /*box-shadow: inset -6px 6px 4px black;*/
    background-color: rgba(7,86,152,0.8);
-   color: white;
+   color: black;
 }
     
 /*.roundedImage{
