--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,9 @@ width:90%;
 
 	body {
 		background: #fff;
-	}
+    text-align: justify;
+    text-justify: inter-word;
+}
 
 	body, input, select, textarea {
 		color: #444;
@@ -1229,7 +1231,7 @@ width:90%;
   background:-moz-linear-gradient(#2e88c4, #075698);
   background:-o-linear-gradient(#2e88c4, #075698);
   background:linear-gradient(#2e88c4, #075698);*/
-  background: white;
+  background: transparent;
   -webkit-border-radius:10px;
   -moz-border-radius:10px;
   border-radius:10px;
@@ -1250,7 +1252,7 @@ width:90%;
 /* Hamon Violet-marron*/
 .triangle-right.left0 {
   margin-left:40px;
-  background:#933d41;
+ /* background:#933d41;*/
    /*  box-shadow: 6px 6px 6px black;*/
 border:5px solid #933d41;
 
@@ -1259,7 +1261,7 @@ border:5px solid #933d41;
 /* Le pen orange */
 .triangle-right.left2 {
   margin-left:40px;
-  background:#e48400;
+ /* background:#e48400;*/
   /*box-shadow: 6px 6px 6px black;*/
 	border: 5px solid #e48400;
 }
@@ -1267,7 +1269,7 @@ border:5px solid #933d41;
 /* Mélenchon bleu canard */
 .triangle-right.left3{
   margin-left:40px;
-  background:#009688;
+  /*background:#009688;*/
   /*box-shadow: 6px 6px 6px black;*/
 	border: 5px solid #009688;
 }
@@ -1275,7 +1277,7 @@ border:5px solid #933d41;
 /* Macron bleu */
 .triangle-right.left4{
   margin-left:40px;
-  background:#0F52Ba;
+  /*background:#0F52Ba;*/
   /*box-shadow: 6px 6px 6px black;*/
 	border: 5px solid #0F52Ba;
 }
