--- a/css/style.css
+++ b/css/style.css
@@ -1224,7 +1224,7 @@ width:90%;
   position:relative;
   padding:15px;
   margin:1em 0 3em;
-  color:#fff;
+  color:black;
   /*background:#075698; /* default background for browsers without gradient support */
   /*css3 */
   /*background:-webkit-gradient(linear, 0 0, 0 100%, from(#2e88c4), to(#075698));
