--- a/css/style.css
+++ b/css/style.css
@@ -1279,7 +1279,7 @@ border:5px solid #933d41;
   margin-left:40px;
   /*background:#0F52Ba;*/
   /*box-shadow: 6px 6px 6px black;*/
-	border: 5px solid #0F52Ba;
+	border: 5px solid #0f52ba;
 }
 
 
