--- a/css/style.css
+++ b/css/style.css
@@ -1351,7 +1351,7 @@ border:5px solid #933d41;
 
 
 .paraxify.intermede-1{
-background: url("../images/Salgado3.jpeg");
+background: url("../images/G2.jpeg");
 height:800px;
   background-attachment: fixed;
   background-position: center;
@@ -1359,7 +1359,7 @@ height:800px;
 }
 
 .paraxify.intermede-2{
-background: url("../images/Salgado.jpg");
+background: url("../images/G3.jpeg");
 height:800px;
   background-attachment: fixed;
   background-position: center;
@@ -1367,7 +1367,7 @@ height:800px;
 }
 
 .paraxify.intermede-3{
-background: url("../images/Salgado4.jpeg");
+background: url("../images/G4.jpeg");
 height:800px;
   background-attachment: fixed;
   background-position: center;
@@ -1375,7 +1375,7 @@ height:800px;
 }
 
 .paraxify.intermede-4{
-background: url("../images/Salgado5.jpeg");
+background: url("../images/G5.jpeg");
 height:800px;
   background-attachment: fixed;
   background-position: center;
