--- a/css/style.css
+++ b/css/style.css
@@ -993,7 +993,7 @@ width:90%;
 /* Banner */
 
 	#banner {
-		background: url("../images/Salgado2.jpeg");
+		background: url("../images/G1.jpeg");
 		height: 484;
 		background-position: center;
 		background-repeat: no-repeat;
