--- a/css/style.css
+++ b/css/style.css
@@ -1463,7 +1463,7 @@ border-right: 2px outset black;*/
 #counter
 {
   background:black;
-  color:red;
+  color:#E48400;
   font-size:24px;
   line-height:16px;
   width:80px;
