--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,8 @@ width:90%;
 		background: #fff;
     text-align: justify;
     text-justify: inter-word;
+width:100%;
+
 }
 
 	body, input, select, textarea {
