--- a/css/style.css
+++ b/css/style.css
@@ -1469,7 +1469,8 @@ border-right: 2px outset black;*/
   color:#E48400;
   font-size:24px;
   line-height:16px;
-  width:80px;
+  width:100%;
+/* width:80px;*/
   padding:0px;
   border:3px solid gray;
   -moz-border-radius:3px;
