--- a/css/style.css
+++ b/css/style.css
@@ -1471,6 +1471,7 @@ border-right: 2px outset black;*/
   line-height:16px;
   width:100%;
 /* width:80px;*/
+height:100%;
   padding:0px;
   border:3px solid gray;
   -moz-border-radius:3px;
