--- a/css/style.css
+++ b/css/style.css
@@ -1491,7 +1491,7 @@ height:100%;
   align-items: center;
   justify-content: space-between;
   background-color: transparent;
-height:100%:
+height:100%;
 }
 
   .element + .tooltip > .tooltip-inner {
