--- a/css/style.css
+++ b/css/style.css
@@ -1466,7 +1466,7 @@ border-right: 2px outset black;*/
 #counter
 {
   background:black;
-  color:#E48400;
+  color:red;
   font-size:24px;
   line-height:16px;
   width:100%;
