--- a/css/style.css
+++ b/css/style.css
@@ -994,7 +994,7 @@ width:100%;
 /* Banner */
 
 	#banner {
-		background: url("../images/G1.jpeg");
+		background: url("../images/J1.jpeg");
 		height: 484;
 		background-position: center;
 		background-repeat: no-repeat;
