--- a/css/style.css
+++ b/css/style.css
@@ -1352,7 +1352,7 @@ border:5px solid #933d41;
 
 
 .paraxify.intermede-1{
-background: url("../images/G2.jpeg");
+background: url("../images/J2.jpeg");
 height:800px;
   background-attachment: fixed;
   background-position: center;
@@ -1360,7 +1360,7 @@ height:800px;
 }
 
 .paraxify.intermede-2{
-background: url("../images/G3.jpeg");
+background: url("../images/J3.jpeg");
 height:800px;
   background-attachment: fixed;
   background-position: center;
@@ -1368,7 +1368,7 @@ height:800px;
 }
 
 .paraxify.intermede-3{
-background: url("../images/G4.jpeg");
+background: url("../images/J4.jpeg");
 height:800px;
   background-attachment: fixed;
   background-position: center;
