--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ width:100%;
 
 	body, input, select, textarea {
 		color: #444;
-		font-family: 'Arapey', serif;
+		font-family: 'Roboto', serif;
 		font-size: 15pt;
 		font-weight: 300;
 		line-height: 1.65em;
@@ -152,7 +152,7 @@ width:100%;
 		background: rgba(144, 144, 144, 0.075);
 		border-radius: 4px;
 		border: solid 1px rgba(144, 144, 144, 0.25);
-		font-family: "Courier New", monospace;
+		font-family: "Roboto", monospace;
 		font-size: 0.9em;
 		margin: 0 0.25em;
 		padding: 0.25em 0.65em;
@@ -160,7 +160,7 @@ width:100%;
 
 	pre {
 		-webkit-overflow-scrolling: touch;
-		font-family: "Courier New", monospace;
+		font-family: "Roboto", monospace;
 		font-size: 0.9em;
 		margin: 0 0 2em 0;
 	}
