--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,14 @@
 @import url('https://fonts.googleapis.com/css?family=Arapey:400,400i');
 @import url('https://fonts.googleapis.com/css?family=Gabriela')
 @import url('https://fonts.googleapis.com/css?family=Aref+Ruqaa');
- @import url('https://fonts.googleapis.com/css?family=Roboto:300');
+ @import url('https://fonts.googleapis.com/css?family=Muli:300');
 /*import style bubble*/
 
 #mainBubble {
   background: #fff;
   border: solid 0px #ddd;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0);
-  font-family: 'Roboto', serif;
+  font-family: 'Muli', serif;
   font-size: 20px;
   height: 900px;
   position: relative;
@@ -48,7 +48,7 @@ width:100%;
 
 	body, input, select, textarea {
 		color: #444;
-		font-family: 'Roboto', serif;
+		font-family: 'Muli', serif;
 		font-size: 15pt;
 		font-weight: 300;
 		line-height: 1.65em;
@@ -160,7 +160,7 @@ width:100%;
 
 	pre {
 		-webkit-overflow-scrolling: touch;
-		font-family: "Roboto", monospace;
+		font-family: "Muli", monospace;
 		font-size: 0.9em;
 		margin: 0 0 2em 0;
 	}
