--- a/css/style.css
+++ b/css/style.css
@@ -1361,7 +1361,7 @@ height:800px;
 }
 
 .paraxify.intermede-2{
-background: url("../images/D3.jpg");
+background: url("../images/E3.jpg");
 height:800px;
   background-attachment: fixed;
   background-position: center;
