--- a/css/style.css
+++ b/css/style.css
@@ -1369,7 +1369,7 @@ height:800px;
 }
 
 .paraxify.intermede-3{
-background: url("../images/J4.jpeg");
+background: url("../images/D4.jpeg");
 height:800px;
   background-attachment: fixed;
   background-position: center;
