--- a/css/style.css
+++ b/css/style.css
@@ -1410,7 +1410,7 @@ height:800px;
 }
 
 .paraxify.intermede-3{
-background: url("../images/D4.jpg");
+background: url("../images/E4.jpg");
 height:800px;
   background-attachment: fixed;
   background-position: center;
@@ -1418,7 +1418,7 @@ height:800px;
 }
 
 .paraxify.intermede-4{
-background: url("../images/D5.jpg");
+background: url("../images/E5.jpg");
 height:800px;
   background-attachment: fixed;
   background-position: center;
