--- a/css/style.css
+++ b/css/style.css
@@ -1418,7 +1418,7 @@ height:800px;
 }
 
 .paraxify.intermede-4{
-background: url("../images/E5.jpg");
+background: url("../images/K5.jpg");
 height:800px;
   background-attachment: fixed;
   background-position: center;
