--- a/css/style.css
+++ b/css/style.css
@@ -1354,7 +1354,7 @@ border:5px solid #933d41;
 
 
 .paraxify.intermede-1{
-background: url("../images/J2.jpeg");
+background: url("../images/D2.jpg");
 height:800px;
   background-attachment: fixed;
   background-position: center;
