--- a/css/style.css
+++ b/css/style.css
@@ -1436,7 +1436,8 @@ border-radius:150px;
     flex-direction: row;
 	justify-content:flex-start;
    align-items:center;
-   width:700px; 
+   /*width:700px;*/
+	width:50%;
    height:200px;
  /*border-left: 2px outset black;
  border-bottom: 2px inset black;
@@ -1451,7 +1452,8 @@ flex-direction:row;
 flex-wrap:wrap;
 justify-content: space-between;
 margin-top:40px;
-margin-bottom:40px;}
+margin-bottom:40px;
+}
 
 .gen2 
 {   display: flex;
