--- a/css/style.css
+++ b/css/style.css
@@ -1445,7 +1445,27 @@ border-radius:150px;
  border-bottom: 2px inset black;
   box-shadow: -3px 3px 6px black;*/
 
+	
    padding: 0px;
+}
+
+@media screen and (max-width: 1280px)
+{
+.roundedImage
+{   display: flex;
+    flex-direction: row;
+	justify-content:flex-start;
+   align-items:center;
+   width:700px;
+	width:50%;
+   height:200px;
+ /*border-left: 2px outset black;
+ border-bottom: 2px inset black;
+  box-shadow: -3px 3px 6px black;*/
+
+	
+   padding: 0px;
+}
 }
 
 .gen 
