--- a/css/style.css
+++ b/css/style.css
@@ -1440,8 +1440,8 @@ border-radius:150px;
 	justify-content:flex-start;
    align-items:center;
    /*width:700px;*/
-	width:35%;
-   height:200px;
+	width:45%;
+  /* height:200px;*/
 	min-width:300px;
  /*border-left: 2px outset black;
  border-bottom: 2px inset black;
